# geo-rs

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  rustfmt.toml
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/benchmarks/: baseline.json
.github/scripts/: bench-compare.mjs
.github/workflows/: ci.yml
benches/js/: bench_runner.mjs  package.json
benches/rust/: Cargo.toml  core_ops.rs
crates/geo-algo/: Cargo.toml
crates/geo-algo/src/: buffer.rs  centroid.rs  convex_hull.rs  lib.rs  line_ops.rs  simplify.rs
crates/geo-bool/: Cargo.toml
crates/geo-bool/src/: predicates.rs
crates/geo-core/: Cargo.toml
crates/geo-core/src/: convert.rs  coords.rs  error.rs  lib.rs  measure.rs  types.rs
crates/geo-grid/: Cargo.toml
crates/geo-grid/src/: hex_grid.rs  isolines.rs  lib.rs  voronoi.rs
crates/geo-index/: Cargo.toml
crates/geo-index/src/: kdtree.rs  lib.rs  rtree.rs
crates/geo-set/: Cargo.toml
crates/geo-set/src/: lib.rs  set_ops.rs
crates/geo-wasm/: Cargo.toml
crates/geo-wasm/src/: arena.rs  dispatcher.rs  dispatcher_fix.rs  lib.rs
crates/geo-wasm/src/fbs/: geometry.fbs
docs/: ARCHITECTURE.md  DEVIATIONS.md  IMPLEMENTATION.md
